# codespaces-blank

./: .env  .gitignore  1.py  1.two-sum.java  100. Same Tree.md  1002.find-common-characters.java  101. Symmetric Tree.md  1013.partition-array-into-three-parts-with-equal-sum.java  102. Binary Tree Level Order Traversal.md  103. Binary Tree Zigzag Level Order Traversal.md  104. Maximum Depth of Binary Tree.md  104.maximum-depth-of-binary-tree.java  1047.remove-all-adjacent-duplicates-in-string.java  1051.height-checker.java  108.convert-sorted-array-to-binary-search-tree.java  109.convert-sorted-list-to-binary-search-tree.java  110. Balanced Binary Tree.md  110.balanced-binary-tree.java  111. Minimum Depth of Binary Tree.md  111.minimum-depth-of-binary-tree.java  116.populating-next-right-pointers-in-each-node.java  1165.single-row-keyboard.java  1170.compare-strings-by-frequency-of-the-smallest-character.java  118.pascals-triangle.java  1184.distance-between-bus-stops.java  1185.day-of-the-week.java  119.pascals-triangle-ii.java  12.integer-to-roman.java  120.triangle.java  121. Best Time to Buy and Sell Stock.md  121.best-time-to-buy-and-sell-stock.java  122.best-time-to-buy-and-sell-stock-ii.java  1235.maximum-profit-in-job-scheduling.java  124.binary-tree-maximum-path-sum.java  125.valid-palindrome.java  1252.cells-with-odd-values-in-a-matrix.java  1266.minimum-time-visiting-all-points.java  1299.replace-elements-with-greatest-element-on-right-side.java  13.roman-to-integer.java  130.surrounded-regions.java  (+285 more)
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  main_euswebapply.yml  release.yml  rust.yml
.trunk/: trunk.yaml
HW 04/: cards.py  cards_v2.py  runlength_decoder.py  test_runlength_decoder.py  test_upc.py  upc.py
HW 04/Submission/: cards.py  hw4data.py  runlength_decoder.py  test_runlength_decoder.py  test_upc.py  upc.py  written.txt
HW 04/Trials/: cards_v2.py  imported_extra.py
HW05/: main_text_editor.py  test_text_editor.py  text_editor.py  written.txt
HW06/: grammar.py
HW06/01-Turtle/: draw_grammar.py  grammar.py  main_grammar.py  test_grammar.py
HW06/01-Turtle/Test files/: 00 kochanti.txt  00 kochisland.txt  06 point.txt
HW06/01-Turtle/input_files/: hilbert.txt  levy.txt  sierpinski.txt  snowflake.txt
HW06/02-Decoder/: decoder.py  main_decoder.py
HW06/02-Decoder/decoder-files-1/: code.txt  encoded-passage.txt
HW06/input_files/: dragon.txt  example.txt
Obsidian/LeetCode/: 1672. Richest Customer Wealth.md
SprotifyMusic/: __init__.py  __main__.py  logging.py  misc.py
SprotifyMusic/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
SprotifyMusic/plugins/: __init__.py
SprotifyMusic/utils/: ###thumbnails###  __init__.py  channelplay.py  cleanmode.py  database.py  error.py  exceptions.py  extraction.py  fonts.py  formatters.py  logger.py  mongo.py  sys.py  thumbnails.py
TanuMusic/: __init__.py  __main__.py  misc.py
TanuMusic/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
TanuMusic/utils/: channelplay.py  cleanmode.py  database.py  error.py  extraction.py  inlinequery.py  logger.py  pastebin.py  sys.py  thumbnails.py
app/: main.py  page.tsx
app/components/: Posts.tsx  Users.tsx
app/helpers/: fetchContext.py  getAudio.py  getContent.py  getPodcastScript.py  getTopicOutline.py
app/home/: layout.tsx  page.tsx
app/home2/: layout.tsx  page.tsx
app/model/: model.py
app/test/: page.tsx
client/: package-lock.json
components/: AddPostForm.tsx  add-user-form.tsx  handleSubmitAddPostForm.tsx  handleSubmitAddUserForm.tsx
config/: ConfigReadme.md  config.py
cookies/: cookies.txt
docs/: failed.md  test1.txt
examples/: compression.rs  custom_request_headers.rs  dependency_injection.rs  file_download.rs  file_upload.rs  head_request.rs  headers.rs  hello_world.rs  http_request_handler.rs  json.rs  long_running_task.rs  middleware.rs  options_request.rs  query_params.rs  route_groups.rs  route_params.rs  sync_api.rs  trace_request.rs
examples/files/: download.txt  upload_test.txt
front/: wensday.yml
learndj/: db.sqlite3  manage.py
learndj/indexpage/: apps.py  urls.py  views.py
learndj/learndj/: asgi.py  settings.py  urls.py  wsgi.py
learndj/templates/: index.html  pagelist.html  placeholder.html
modules/: conversation_flow.lua  error_handler.lua  http_client.lua  json_handler.lua  session_manager.lua
novel/: .dockerignore  Dockerfile  build.js  deno.json  docker-compose.yml  import_map.json  index.html  main.js  main.jsx  package-lock.json  package.json
novel/mdx/: home.mdx  intro.mdx
novel/src/: app.jsx
prisma/: schema.prisma
scripts/: age_calculator.py  birthday_calculator.py  deploy.lua  first.py  setup_env.lua
server/: package.json
services/: auth_service.lua  cache_service.lua  llm_api.lua
simple/: Dockerfile  docker-compose.yml  server.ts
src/: App.jsx  app.rs  di.rs  headers.rs  http.rs  index.css  lib.rs  main.jsx  middleware.rs  server.rs  test_utils.rs
src/app/: body.rs  compress.rs  di.rs  endpoints.rs  http_context.rs  mapping.rs  middlewares.rs  pipeline.rs  request.rs  results.rs  router.rs  scope.rs  server.rs
src/di/: container.rs  dc.rs  inject.rs
src/headers/: encoding.rs  extract.rs  header.rs  macros.rs  quality.rs
src/http/: body.rs  endpoints.rs  request.rs  results.rs
src/middleware/: compress.rs  http_context.rs
src/router/: index.jsx
src/server/: http1.rs  http2.rs
strings/: __init__.py  helpers.py
strings/langs/: ar.yml  en.yml  hi.yml  pa.yml
tests/: app_async_file_download.rs  app_async_json_payload.rs  app_async_mapping_tests.rs  app_async_middleware_mapping_tests.rs  app_async_request_params.rs  app_sync_file_download.rs  app_sync_json_payload.rs  app_sync_mapping_tests.rs  app_sync_request_params.rs  app_tests.rs  file_download.rs  file_upload.rs  headers.rs  json_payload.rs  mapping_tests.rs  middleware_mapping_tests.rs  request_params.rs
tests/resources/: test_file_saved.txt
ultraviolet-ephemera/: package-lock.json  package.json
vue-project/: .eslintrc.cjs  README.md  package.json
(+206 files in other folders)
