[package]
name = "volga"
version = "0.3.1"
edition = "2021"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
license = "MIT"
repository = "https://github.com/RomanEmreis/volga"
description = "Easy & Fast Web Framework for Rust"
documentation = "https://docs.rs/volga"
readme = "README.md"
homepage = "https://romanemreis.github.io/volga-docs"
categories = ["web-programming::http-server"]
keywords = ["volga", "server", "http", "web", "framework"]

[dependencies]
bytes = "1.8.0"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["server"], optional = true }
hyper-util = { version = "0.1.10", features = ["server", "server-auto", "server-graceful", "service", "tokio"], optional = true }
mime = "0.3.17"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
tokio-stream = "0.1.16"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json", "http2"] }

[features]
default = ["http1"]
full = ["http1", "http2"]

http1 = ["dep:hyper", "hyper?/http1", "dep:hyper-util", "hyper-util?/http1"]
http2 = ["dep:hyper", "hyper?/http2", "dep:hyper-util", "hyper-util?/http2"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "sync_api"
path = "examples/sync_api.rs"

[[example]]
name = "middleware"
path = "examples/middleware.rs"

[[example]]
name = "query_params"
path = "examples/query_params.rs"

[[example]]
name = "route_params"
path = "examples/route_params.rs"

[[example]]
name = "json"
path = "examples/json.rs"

[[example]]
name = "headers"
path = "examples/headers.rs"

[[example]]
name = "file_download"
path = "examples/file_download.rs"

[[example]]
name = "file_upload"
path = "examples/file_upload.rs"

[[example]]
name = "long_running_task"
path = "examples/long_running_task.rs"
