[package]
name = "volga"
version = "0.4.2"
edition = "2021"
rust-version = "1.80.0"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
license = "MIT"
repository = "https://github.com/RomanEmreis/volga"
description = "Easy & Fast Web Framework for Rust"
documentation = "https://docs.rs/volga"
readme = "README.md"
homepage = "https://romanemreis.github.io/volga-docs"
categories = ["web-programming::http-server"]
keywords = ["volga", "server", "http", "web", "framework"]

[dependencies]
bytes = "1.9.0"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["server"], optional = true }
hyper-util = { version = "0.1.10", features = ["server", "server-auto", "server-graceful", "service", "tokio"], optional = true }
mime = "0.3.17"
pin-project-lite = "0.2.15"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
serde = "1.0.216"
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json", "http2"] }
serde = { version = "1.0.215", features = ["derive"] }

[features]
# Default HTTP/1 only server
default = ["http1", "middleware"]
# HTTP/1 and HTTP/2 server
full = ["http1", "http2", "middleware"]

# Mimimal HTTP/1
mini = ["http1"]
# Mimimal HTTP/2
mini2 = ["http2"]

http1 = ["dep:hyper", "hyper?/http1", "dep:hyper-util", "hyper-util?/http1"]
http2 = ["dep:hyper", "hyper?/http2", "dep:hyper-util", "hyper-util?/http2"]

middleware = []

[[test]]
name = "middleware_mapping_tests"
required-features = ["middleware"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "middleware"
path = "examples/middleware.rs"
required-features = ["middleware"]

[[example]]
name = "query_params"
path = "examples/query_params.rs"

[[example]]
name = "route_params"
path = "examples/route_params.rs"

[[example]]
name = "json"
path = "examples/json.rs"

[[example]]
name = "headers"
path = "examples/headers.rs"

[[example]]
name = "head_request"
path = "examples/head_request.rs"

[[example]]
name = "options_request"
path = "examples/options_request.rs"

[[example]]
name = "custom_request_headers"
path = "examples/custom_request_headers.rs"
required-features = ["middleware"]

[[example]]
name = "file_download"
path = "examples/file_download.rs"

[[example]]
name = "file_upload"
path = "examples/file_upload.rs"

[[example]]
name = "long_running_task"
path = "examples/long_running_task.rs"
